fix for background on mobile

--- a/themes/mlk/scss/imports/_hero.scss
+++ b/themes/mlk/scss/imports/_hero.scss
@@ -4,6 +4,9 @@
 	background-color: white;
 	background-repeat: no-repeat;
 	background-position: 40% 0;
+	background-size: cover;
+
+
 
 	.overlay-container{
 		background: rgba(255, 255, 255, 0.47);
@@ -27,6 +30,7 @@
 	@media screen and (min-width: $screen-lg){
 		background-position: 50% 0;
 		height: 600px;
+		background-size: auto;
 
 	}
 
